--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -677,7 +677,7 @@ QListView::text {
        </rect>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="Consulter">
        <widget class="QPushButton" name="modifier_Necessiteux">
@@ -1892,7 +1892,21 @@ border-radius:15px;
         </widget>
        </widget>
       </widget>
-      <widget class="QWidget" name="Statistiques"/>
+      <widget class="QWidget" name="Statistiques">
+       <widget class="QCustomPlot" name="customPlot" native="true">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>20</y>
+          <width>911</width>
+          <height>561</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+       </widget>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="crises"/>
@@ -1911,6 +1925,14 @@ border-radius:15px;
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="ressources.qrc"/>
  </resources>
