--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -769,7 +769,7 @@ font-family : century gothic;
        <string notr="true">font: 8pt &quot;Century Gothic&quot;;</string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -1640,7 +1640,7 @@ background-color:white;
       </widget>
       <widget class="QWidget" name="tab_4">
        <attribute name="title">
-        <string>Page</string>
+        <string>Les Salaires</string>
        </attribute>
        <widget class="QPushButton" name="Afficher_Emp_HOME_2">
         <property name="geometry">
@@ -1919,6 +1919,11 @@ font-family : century gothic;
         </property>
        </widget>
       </widget>
+      <widget class="QWidget" name="tab_3">
+       <attribute name="title">
+        <string>Statistique</string>
+       </attribute>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="page_5">
@@ -2002,8 +2007,8 @@ font-family : century gothic;
      <rect>
       <x>40</x>
       <y>370</y>
-      <width>261</width>
-      <height>281</height>
+      <width>251</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="title">
@@ -2012,7 +2017,7 @@ font-family : century gothic;
     <widget class="QWidget" name="verticalLayoutWidget_2">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>50</x>
        <y>20</y>
        <width>160</width>
        <height>74</height>
@@ -2044,7 +2049,7 @@ font-family : century gothic;
     <widget class="QPushButton" name="bo_3">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>50</x>
        <y>130</y>
        <width>158</width>
        <height>24</height>
@@ -2057,9 +2062,144 @@ font-family : century gothic;
     <widget class="QPushButton" name="mdp_oub">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>50</x>
        <y>100</y>
        <width>41</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="bull_mdp">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>680</y>
+      <width>251</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <widget class="QPushButton" name="mdp_b_2">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>150</y>
+       <width>101</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Terminer</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="mdp1">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>40</y>
+       <width>158</width>
+       <height>24</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="ermdp">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>110</y>
+       <width>211</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Utilisez au moins huit
+caractères</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="mdp_o_2">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>20</y>
+       <width>131</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Nouveau Mot de pass: </string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="mdp2">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>80</y>
+       <width>158</width>
+       <height>24</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="mdp_o_3">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>60</y>
+       <width>141</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Confirmer Mot de pass: </string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="bull_code">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>540</y>
+      <width>251</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <widget class="QPushButton" name="mdp_b">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>90</y>
+       <width>101</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Envoyer le code</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="new_mdp">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>40</y>
+       <width>158</width>
+       <height>24</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="er_mdp">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>70</y>
+       <width>151</width>
        <height>16</height>
       </rect>
      </property>
@@ -2070,50 +2210,14 @@ font-family : century gothic;
     <widget class="QLabel" name="mdp_o">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>170</y>
+       <x>50</x>
+       <y>20</y>
        <width>111</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
       <string>Votre Téléphone:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="new_mdp">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>190</y>
-       <width>158</width>
-       <height>24</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="mdp_b">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>240</y>
-       <width>101</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Envoyer le code</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="er_mdp">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>220</y>
-       <width>151</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
      </property>
     </widget>
    </widget>
