--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -769,7 +769,7 @@ font-family : century gothic;
        <string notr="true">font: 8pt &quot;Century Gothic&quot;;</string>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>5</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -898,19 +898,6 @@ font-family : century gothic;
         </property>
         <property name="text">
          <string/>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pdf">
-        <property name="geometry">
-         <rect>
-          <x>110</x>
-          <y>260</y>
-          <width>80</width>
-          <height>25</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>PushButton</string>
         </property>
        </widget>
       </widget>
@@ -1636,7 +1623,11 @@ font-family : century gothic;
           <item row="8" column="4">
            <layout class="QHBoxLayout" name="horizontalLayout_6">
             <item>
-             <widget class="QLineEdit" name="champ_mdp_2"/>
+             <widget class="QLineEdit" name="champ_mdp_2">
+              <property name="echoMode">
+               <enum>QLineEdit::Password</enum>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
@@ -2459,7 +2450,11 @@ font-family : century gothic;
        <widget class="QLineEdit" name="login"/>
       </item>
       <item>
-       <widget class="QLineEdit" name="pass"/>
+       <widget class="QLineEdit" name="pass">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLabel" name="er_log">
