--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -769,7 +769,7 @@ font-family : century gothic;
        <string notr="true">font: 8pt &quot;Century Gothic&quot;;</string>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -1021,7 +1021,7 @@ font-weight: normal;
         <widget class="QGroupBox" name="gridGroupBox">
          <property name="geometry">
           <rect>
-           <x>190</x>
+           <x>220</x>
            <y>20</y>
            <width>801</width>
            <height>251</height>
@@ -1375,11 +1375,24 @@ font-family : century gothic;
           <string/>
          </property>
         </widget>
+        <widget class="QLabel" name="ep">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>50</y>
+           <width>181</width>
+           <height>191</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
        </widget>
        <widget class="QPushButton" name="pushButton_9">
         <property name="geometry">
          <rect>
-          <x>890</x>
+          <x>930</x>
           <y>280</y>
           <width>80</width>
           <height>25</height>
@@ -1442,7 +1455,7 @@ font-weight: normal;
         <widget class="QGroupBox" name="gridGroupBox_3">
          <property name="geometry">
           <rect>
-           <x>190</x>
+           <x>220</x>
            <y>20</y>
            <width>801</width>
            <height>251</height>
@@ -1758,7 +1771,7 @@ font-family : century gothic;
          <property name="geometry">
           <rect>
            <x>30</x>
-           <y>60</y>
+           <y>80</y>
            <width>131</width>
            <height>141</height>
           </rect>
@@ -1802,6 +1815,19 @@ font-size:22px;
 font:bold;
 font-family : century gothic;
 }</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+        <widget class="QLabel" name="up">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>50</y>
+           <width>181</width>
+           <height>191</height>
+          </rect>
          </property>
          <property name="text">
           <string/>
@@ -2439,10 +2465,10 @@ font-family : century gothic;
    <widget class="QGroupBox" name="box">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>370</y>
-      <width>251</width>
-      <height>161</height>
+      <x>500</x>
+      <y>150</y>
+      <width>411</width>
+      <height>261</height>
      </rect>
     </property>
     <property name="title">
@@ -2452,14 +2478,28 @@ font-family : century gothic;
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>20</y>
-       <width>160</width>
-       <height>74</height>
+       <y>70</y>
+       <width>311</width>
+       <height>118</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Email:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QLineEdit" name="login"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_10">
+        <property name="text">
+         <string>Mot de Pass:</string>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="pass">
@@ -2488,7 +2528,7 @@ font-family : century gothic;
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>130</y>
+       <y>220</y>
        <width>158</width>
        <height>24</height>
       </rect>
@@ -2501,7 +2541,7 @@ font-family : century gothic;
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>100</y>
+       <y>190</y>
        <width>41</width>
        <height>16</height>
       </rect>
@@ -2514,8 +2554,8 @@ font-family : century gothic;
    <widget class="QGroupBox" name="bull_mdp">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>680</y>
+      <x>580</x>
+      <y>560</y>
       <width>251</width>
       <height>181</height>
      </rect>
@@ -2600,8 +2640,8 @@ caractères</string>
    <widget class="QGroupBox" name="bull_code">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>540</y>
+      <x>580</x>
+      <y>420</y>
       <width>251</width>
       <height>131</height>
      </rect>
